--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 </head>
 <body>
   <app-root>Loading...</app-root>
+
+  <script src="assets/js/jquery-3.2.1.min.js" type="text/javascript" charset="utf-8" async defer></script>
+  <script src="assets/js/bootstrap.min.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
