--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>Loading....</app-root>
 
   <script src="assets/js/jquery-3.2.1.min.js" type="text/javascript" charset="utf-8" async defer></script>
   <script src="assets/js/bootstrap.min.js" type="text/javascript" charset="utf-8" async defer></script>
