--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,52 @@
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
   <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
-<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+  <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+  <!-- <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script> -->
+  <!-- <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script> -->
 </head>
 <body>
+<!-- 
+  <script>
+    // START twttr initialization
+    window.twttr = (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0],
+      t = window.twttr || {};
+      if (d.getElementById(id)) return t;
+      js = d.createElement(s);
+      js.id = id;
+      js.src = "https://platform.twitter.com/widgets.js";
+      fjs.parentNode.insertBefore(js, fjs);
+    
+      t._e = [];
+      t.ready = function(f) {
+        t._e.push(f);
+      };
+    
+      return t;
+    }(document, "script", "twitter-wjs"));
+    // END twttr initialization
+  </script>
+ 
+  <app-root></app-root>
+  
+  <h1>Static Tweet</h1>
+  <script>
+    // adds a tweet
+    twttr.ready(
+      function(evt) {
+        twttr.widgets.createTweet(
+          '863408865727180800',
+          document.getElementById('container'),
+          {
+            theme: 'dark'
+        });
+      }
+    );
+  </script>
+  <div id="container"></div> -->
+ 
+	 
   <app-root>Loading...</app-root>
 
   <script src="assets/js/jquery-3.2.1.min.js" type="text/javascript" charset="utf-8" async defer></script>
