--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
   <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
   <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
   <script src="./assets/js/jquery-3.2.1.min.js" ></script>
-  <link href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" rel="Stylesheet"></link>
-<script src='https://cdn.rawgit.com/pguso/jquery-plugin-circliful/master/js/jquery.circliful.min.js'></script>
+  <link href="./assets/css/jquery-ui.css" rel="Stylesheet"></link>
+<script src='./assets/js/jquery.circliful.min.js'></script>
 <script src="./assets/js/jquery-ui.min.js" ></script>
 
   <style type="text/css">
@@ -84,13 +84,11 @@
 	 
   <app-root>Loading...</app-root>
 
-  <script src="./assets/js/jquery-3.2.1.min.js" type="text/javascript" charset="utf-8" async defer></script>
-  <script src="./assets/js/bootstrap.min.js" type="text/javascript" charset="utf-8" async defer></script>
+  <script src="./assets/js/jquery-3.2.1.min.js" ></script>
+  <link href="./assets/css/jquery-ui.css" rel="Stylesheet"></link>
+<script src='./assets/js/jquery.circliful.min.js'></script>
+<script src="./assets/js/jquery-ui.min.js" ></script>
 
-  <script
-  src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"
-  integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="
-  crossorigin="anonymous"></script>
 
   <script >
   var crossClicked = function(e){
